--- a/styles.css
+++ b/styles.css
@@ -97,3 +97,15 @@ button:hover {
     /*font-style: italic;*/
     margin: 0;
 }
+
+@media screen and (max-width: 450px) {
+    h1 {
+        margin: 20px 0 10px 0;
+    }
+    h2 {
+        padding-bottom: 35px;
+    }
+    .forms-container {
+        flex-direction: column;
+    }
+}
