--- a/styles.css
+++ b/styles.css
@@ -12,14 +12,19 @@
 }
 
 body {
-    max-width: 1000px;
     background-color: #111111;
     color: #e1e1e1;
     margin: 0 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 100vh;
+    height: auto;
 }
 
 h1 {
     font-size: 64px;
+    /*text-shadow: rgba(225, 225, 225, 0.5) 0px 0px 14px;*/
 }
 
 h2 {
@@ -31,12 +36,64 @@ h1, h2 {
     text-align: center;
 }
 
+/*region Containers*/
+.page-wrapper {
+    position: relative;
+    width: 100%;
+    /*min-height: 100%;*/
+    height: 100%;
+    max-width: 1000px;
+    margin-bottom: 140px;
+}
+
 .forms-container {
     display: flex;
     flex-direction: row;
-    gap: 16px;
+    gap: 1vw;
     justify-content: center;
 }
+
+.info-container {
+    /*width: 100%;*/
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-items: center;
+    justify-content: center;
+    gap: 1vw;
+    margin: 3.5em 0;
+}
+
+/*endregion*/
+
+.info-container .description {
+    display: block;
+    max-width: 400px;
+    width: 50%;
+    text-align: start;
+    font-weight: 400;
+    color: #939393;
+}
+
+.info-container .description .w-900 {
+    font-weight: 900;
+}
+
+.info-container img {
+    width: 100%;
+    max-width: 400px;
+    height: auto;
+    border-radius: 8px;
+    pointer-events: none;
+    -webkit-user-drag: none;
+    user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    -moz-user-select: none;
+}
+
+
+/*region Encrypt Div*/
 
 .encrypt-div {
     width: 100%;
@@ -52,6 +109,12 @@ h1, h2 {
     text-align: center;
 }
 
+.encrypt-div textarea {
+    resize: vertical;
+}
+
+/*endregion*/
+
 .main-text-area {
     height: 100%;
     min-height: 220px;
@@ -64,10 +127,7 @@ h1, h2 {
     padding: 16px;
     font-family: var(--font-family), monospace;
     font-size: 16px;
-}
-
-.encrypt-div textarea {
-    resize: vertical;
+    border-radius: 4px;
 }
 
 textarea, textarea:hover, textarea:focus, button, button:focus, button:hover {
@@ -85,7 +145,9 @@ button {
     cursor: pointer;
     padding: 8px 12px;
     filter: contrast(1);
+    border-radius: 4px;
 }
+
 button:hover {
     background-color: #9f9f9f;
 }
@@ -98,14 +160,44 @@ button:hover {
     margin: 0;
 }
 
-@media screen and (max-width: 450px) {
+footer {
+    position: absolute;
+    width: 100%;
+    bottom: 40px;
+}
+
+footer p {
+    margin: 0;
+}
+
+footer .year {
+    width: 100%;
+    text-align: center;
+    color: #939393;
+}
+
+@media screen and (max-width: 500px) {
     h1 {
         margin: 20px 0 10px 0;
+        font-size: 44px;
     }
+
     h2 {
         padding-bottom: 35px;
+        font-size: 20px;
     }
+
     .forms-container {
         flex-direction: column;
+        gap: 1em;
+        padding-bottom: 5em;
+    }
+
+    .info-container {
+        flex-direction: column;
+    }
+
+    .info-container .description {
+        width: 100%;
     }
 }
